--- a/src/style.css
+++ b/src/style.css
@@ -22,9 +22,8 @@ body {
 #app {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-  padding: 30px;
 
+  flex-grow: 1;
+  width: 100%;
   height: 100%;
 }
