--- a/src/components/movies-details/styles.css
+++ b/src/components/movies-details/styles.css
@@ -29,3 +29,8 @@
   flex-direction: column;
   justify-content: center;
 }
+@media screen and (max-width: 600px) {
+  .details-item {
+    flex-direction: column;
+  }
+}
